// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoList Component renders Loading when isFetching is true 1`] = `<Loading />`;

exports[`VideoList Component renders error when error is defined 1`] = `
<div
  className="error"
>
  Error
</div>
`;

exports[`VideoList Component renders properly 1`] = `
<div
  className="video-list"
>
  <div
    className="video-list-inner row"
  >
    <VideoListItem
      key="0"
      video={
        Object {
          "description": "Lorem ipsum dolor sit amed.",
          "duration": "PT3M55S",
          "id": "lZoA5ZX4wC0",
          "thubmnail": "video-thumbnail.jpg",
          "title": "Video Title",
        }
      }
    />
    <VideoListItem
      key="1"
      video={
        Object {
          "description": "Lorem ipsum dolor sit amed.",
          "duration": "PT3M55S",
          "id": "lZoA5ZX4wC01",
          "thubmnail": "video-thumbnail-2.jpg",
          "title": "Video Title 2",
        }
      }
    />
  </div>
  <div
    className="loadmore-btn-wrapper"
  >
    <button
      className="btn btn-secondary"
      onClick={[Function]}
    >
      Load More
    </button>
  </div>
</div>
`;

exports[`VideoList Component renders properly if any video is not found. 1`] = `
<div
  className="video-list"
>
  <div
    className="video-list-inner row"
  >
    <div
      className="no-result"
    >
      No result
    </div>
  </div>
  <div
    className="loadmore-btn-wrapper"
  >
    <button
      className="btn btn-secondary"
      onClick={[Function]}
    >
      Load More
    </button>
  </div>
</div>
`;
